--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
   "author": "manikanta katta",
   "license": "MIT",
   "dependencies": {
+    "@deepgram/sdk": "^1.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "deepgram": "^1.0.3",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "gridfs": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "openai": "^3.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
