--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "@deepgram/sdk": "^1.21.0",
+    "aws-sdk": "^2.1378.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -20,9 +21,11 @@
     "gridfs": "^1.0.0",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
+    "mongodb": "^5.5.0",
     "mongoose": "^7.1.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "openai": "^3.2.1"
   },
   "devDependencies": {
